Coverity analysis defect 101928: Arguments in wrong order

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • TIG 2017-08-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The arguments to a function call are provided in the wrong order.

      Defect 101928 (STATIC_C)
      Checker SWAPPED_ARGUMENTS (subcategory none)
      File: /src/mongo/db/repl/idempotency_update_sequence.cpp
      Function mongo::UpdateSequenceGenerator::generatePaths(const mongo::UpdateSequenceGeneratorConfig &, const std::_cxx11::basic_string<char, std::char_traits<char>, std::allocator<char>> &)

            Assignee:
            May Hoque (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: