SERVER-30569 Fix incorrectly swapped document and array probabilities to constructor.